--- a/index.html
+++ b/index.html
@@ -9,22 +9,22 @@
 <body>
     <div id="display">0</div>
     <div id="numbers">
-        <button id="0">0</button>
-        <button id="1">1</button>
-        <button id="2">2</button>
-        <button id="3">3</button>
-        <button id="4">4</button>
-        <button id="5">5</button>
-        <button id="6">6</button>
-        <button id="7">7</button>
-        <button id="8">8</button>
-        <button id="9">9</button>
+        <button id="0" class="num">0</button>
+        <button id="1" class="num">1</button>
+        <button id="2" class="num">2</button>
+        <button id="3" class="num">3</button>
+        <button id="4" class="num">4</button>
+        <button id="5" class="num">5</button>
+        <button id="6" class="num">6</button>
+        <button id="7" class="num">7</button>
+        <button id="8" class="num">8</button>
+        <button id="9" class="num">9</button>
     </div>
     <div id="operators">
-        <button id="add">+</button>
-        <button id="subtract">-</button>
-        <button id="multiply">x</button>
-        <button id="divide">÷</button>
+        <button id="add" class="operation">+</button>
+        <button id="subtract" class="operation">-</button>
+        <button id="multiply" class="operation">x</button>
+        <button id="divide" class="operation">÷</button>
         <button id="equals">=</button>
         <button id="clear">clear</button>
     </div>
