Add decimal functionality to user inputs

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <button id="8" class="num">8</button>
         <button id="9" class="num">9</button>
     </div>
+    <button id="." class="decimal">.</button>
     <div id="operators">
         <button id="add" class="operation">+</button>
         <button id="subtract" class="operation">-</button>
