--- a/index.html
+++ b/index.html
@@ -20,14 +20,16 @@
         <button id="8" class="num">8</button>
         <button id="9" class="num">9</button>
     </div>
-    <button id="." class="decimal">.</button>
+    
     <div id="operators">
+        <button id="." class="decimal">.</button>
         <button id="add" class="operation">+</button>
         <button id="subtract" class="operation">-</button>
         <button id="multiply" class="operation">x</button>
         <button id="divide" class="operation">÷</button>
         <button id="equals">=</button>
         <button id="clear">clear</button>
+        <button id="backspace">backspace</button>
     </div>
 
 <script src="script.js"></script>   
