Add color to buttons

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
             <div id="row4" class="row">
                 <button id="0" class="num defaultSquare">0</button>
-                <button id="." class="decimal defaultSquare">.</button>
+                <button id="." class="decimal defaultSquare num">.</button>
                 <button id="equals" >=</button>
 
 
