Add some styling changes

--- a/index.html
+++ b/index.html
@@ -10,49 +10,49 @@
 <body>
     <h1>Calculator</h1>
     <div id="containerAll">
-        <div id="display">0</div>
+        <div id="display" class="defaultFormat">0</div>
         <div id="inputs">
             <div id="row0" class="row">
-                <button id="clear" class="defaultRectangle">clear</button>
-                <button id="backspace" class="defaultRectangle">backspace</button>
+                <button id="clear" class="defaultRectangle defaultFormat">Clear</button>
+                <button id="backspace" class="defaultRectangle defaultFormat">Backspace</button>
             </div>
             <div id="container1">
                 <div class="left column">
                     <div id="row1" class="row">
-                        <button id="7" class="num defaultSquare">7</button>
-                        <button id="8" class="num defaultSquare">8</button>
-                        <button id="9" class="num defaultSquare">9</button>
+                        <button id="7" class="num defaultSquare defaultFormat">7</button>
+                        <button id="8" class="num defaultSquare defaultFormat">8</button>
+                        <button id="9" class="num defaultSquare defaultFormat">9</button>
 
                     </div>
                     <div id="row2" class="row">
-                        <button id="4" class="num defaultSquare">4</button>
-                        <button id="5" class="num defaultSquare">5</button>
-                        <button id="6" class="num defaultSquare">6</button>
+                        <button id="4" class="num defaultSquare defaultFormat">4</button>
+                        <button id="5" class="num defaultSquare defaultFormat">5</button>
+                        <button id="6" class="num defaultSquare defaultFormat">6</button>
                     </div>
                     <div id="row3" class="row">
-                        <button id="1" class="num defaultSquare">1</button>
-                        <button id="2" class="num defaultSquare">2</button>
-                        <button id="3" class="num defaultSquare">3</button>
+                        <button id="1" class="num defaultSquare defaultFormat">1</button>
+                        <button id="2" class="num defaultSquare defaultFormat">2</button>
+                        <button id="3" class="num defaultSquare defaultFormat">3</button>
 
                     </div>
                 </div>
                 <div class="right column">
                     <div class="row">
-                        <button id="multiply" class="operation defaultSquareOperation">x</button>
-                        <button id="divide" class="operation defaultSquareOperation">÷</button>
+                        <button id="multiply" class="operation defaultSquareOperation defaultFormat">x</button>
+                        <button id="divide" class="operation defaultSquareOperation defaultFormat">÷</button>
                     </div>
                     <div class="row">
-                        <button id="add" class="operation defaultSquareOperation">+</button>
-                        <button id="subtract" class="operation defaultSquareOperation">-</button>
+                        <button id="add" class="operation defaultSquareOperation defaultFormat">+</button>
+                        <button id="subtract" class="operation defaultSquareOperation defaultFormat">-</button>
                     </div>
                 </div>
             </div>
 
 
             <div id="row4" class="row">
-                <button id="0" class="num defaultSquare">0</button>
-                <button id="." class="decimal defaultSquare num">.</button>
-                <button id="equals" >=</button>
+                <button id="0" class="num defaultSquare defaultFormat">0</button>
+                <button id="." class="decimal defaultSquare num defaultFormat">.</button>
+                <button id="equals" class="defaultFormat">=</button>
 
 
             </div>
