change multiplication symbol

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 </div>
                 <div class="right column">
                     <div class="row">
-                        <button id="multiply" class="operation defaultSquareOperation defaultFormat">x</button>
+                        <button id="multiply" class="operation defaultSquareOperation defaultFormat">×</button>
                         <button id="divide" class="operation defaultSquareOperation defaultFormat">÷</button>
                     </div>
                     <div class="row">
