Remove 0 at startup

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div id="containerAll">
         <div id="displayContainer">
             <div id="topDisplay"></div>
-            <div id="display" class="defaultFormat">0</div>
+            <div id="display" class="defaultFormat"></div>
         </div>
 
         <div id="inputs">
